--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@t3-oss/env-nextjs": "^0.2.1",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "framer-motion": "^10.12.12",
     "next": "^13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
