--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.12.12",
     "next": "^13.4.1",
     "react": "18.2.0",
