--- a/package.json
+++ b/package.json
@@ -19,14 +19,22 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "@vercel/analytics": "^1.1.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.12.12",
+    "lucide-react": "^0.468.0",
     "next": "^15.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-katex": "^7.0.1",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
+    "remark-math": "^6.0.0",
     "superjson": "1.12.2",
+    "tailwind-merge": "^2.5.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/eslint": "^8.21.3",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
@@ -41,7 +49,10 @@
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.2"
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-typography": "^3.1.0",
+    "typescript": "^5.0.2",
+    "velite": "^0.2.2"
   },
   "ct3aMetadata": {
     "initVersion": "7.13.0"
