--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "paths": {
       "~/*": [
         "./src/*"
-      ]
+      ],
+      "#site/content": ["./.velite"]
     },
     "plugins": [
       {
